documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32.H

typedef void VOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

L71W32API BOOL __stdcall L71_ModeIsMon(HCARD handleval);

L71W32API BOOL __stdcall L71_ModeIsNotBC(HCARD handleval);

L71W32API BOOL __stdcall L71_ModeIsNotMon(HCARD handleval);

L71W32API BOOL __stdcall L71_ModeIsNotRT(HCARD handleval);

L71W32API BOOL __stdcall L71_ModeIsNotSerial(HCARD handleval);

L71W32API BOOL __stdcall L71_ModeIsRT(HCARD handleval);

L71W32API BOOL __stdcall L71_ModeIsSerial(HCARD handleval);

L71W32API USHORT __stdcall L71_ModeRd(HCARD handleval);

L71W32API VOID __stdcall L71_ModeWr(USHORT mode,HCARD handleval);

L71W32API ULONG __stdcall L71_MonBlkRd(LPUSHORT buf,ULONG bufcount,LPULONG blkcnt,HCARD handleval);

L71W32API ULONG __stdcall L71_MonBlkRdEx(LPUSHORT buf,ULONG bufcount,ULONG maxblkcnt,LPULONG blkcnt,HCARD handleval);

L71W32API ERRVAL __stdcall L71_MonClear(HCARD handleval);

L71W32API ERRVAL __stdcall L71_MonConfig(ULONG configval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_MonConfigEx(ULONG configval,ULONG moncount,USHORT cardnum,HCARD handleval);

L71W32API ERRVAL __stdcall L71_MonConfigExx(ULONG configval,ULONG seqaddr,ULONG moncount,USHORT cardnum,HCARD handleval);

L71W32API ERRVAL __stdcall L71_MonFilterSA(INT taval,ULONG rcvsamask,ULONG xmtsamask,ULONG rcvmcmask,ULONG xmtmcmask,HCARD handleval);

L71W32API ERRVAL __stdcall L71_MonFilterSAEx(INT taval,ULONG rcvsamask,ULONG xmtsamask,ULONG rcvmcmask,ULONG xmtmcmask,HCARD handleval);

L71W32API ERRVAL __stdcall L71_MonFilterTA(ULONG tamask,HCARD handleval);

L71W32API BOOL __stdcall L71_MonIsRunning(HCARD handleval);

L71W32API USHORT __stdcall L71_MonRd(LPUSHORT buf,HCARD handleval);

L71W32API USHORT __stdcall L71_MonRdEx(LPUSHORT buf,USHORT bufcount,HCARD handleval);

L71W32API BOOL __stdcall L71_MonResume(HCARD handleval);

L71W32API BOOL __stdcall L71_MonStart(HCARD handleval);

L71W32API BOOL __stdcall L71_MonStatus(HCARD handleval);

L71W32API BOOL __stdcall L71_MonStop(HCARD handleval);

L71W32API MSGADDR __stdcall L71_MsgBlockRd(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

L71W32API MSGADDR __stdcall L71_MsgBlockWr(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

L71W32API USHORT __stdcall L71_MsgCheck(MSGADDR msgaddr,HCARD handleval);

L71W32API MSGADDR __stdcall L71_MsgCommRd(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

L71W32API MSGADDR __stdcall L71_MsgCommWr(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

L71W32API MSGADDR __stdcall L71_MsgConfig(ULONG configval,HCARD handleval);

L71W32API MSGADDR __stdcall L71_MsgConfigEx(ULONG configval,USHORT cwd,HCARD handleval);

L71W32API USHORT __stdcall L71_MsgCWD1Rd(MSGADDR msgaddr,HCARD handleval);

L71W32API VOID __stdcall L71_MsgCWD1Wr(USHORT cwd1,MSGADDR msgaddr,HCARD handleval);

L71W32API USHORT __stdcall L71_MsgCWD2Rd(MSGADDR msgaddr,HCARD handleval);

L71W32API VOID __stdcall L71_MsgCWD2Wr(USHORT cwd2,MSGADDR msgaddr,HCARD handleval);

L71W32API VOID __stdcall L71_MsgDataRd(LPUSHORT buf,INT count,MSGADDR msgaddr,HCARD handleval);

L71W32API VOID __stdcall L71_MsgDataWr(LPUSHORT buf,INT count,MSGADDR msgaddr,HCARD handleval);

L71W32API USHORT __stdcall L71_MsgErrorRd(MSGADDR msgaddr,HCARD handleval);

L71W32API VOID __stdcall L71_MsgErrorWr(USHORT value,MSGADDR msgaddr,HCARD handleval);

L71W32API ULONG __stdcall L71_MsgFieldRd(USHORT fieldtype,MSGADDR msgaddr,HCARD handleval);

L71W32API ULONG __stdcall L71_MsgFieldWr(ULONG fieldval,USHORT fieldtype,MSGADDR msgaddr,HCARD handleval);

L71W32API USHORT __stdcall L71_MsgFlagRd(MSGADDR msgaddr,HCARD handleval);

L71W32API VOID __stdcall L71_MsgFlagWr(USHORT msgflag,MSGADDR msgaddr,HCARD handleval);

L71W32API BOOL __stdcall L71_MsgIsAccessed(MSGADDR msgaddr,HCARD handleval);

L71W32API USHORT __stdcall L71_MsgOptRd(MSGADDR msgaddr,HCARD handleval);

L71W32API VOID __stdcall L71_MsgOptWr(USHORT msgopt,MSGADDR msgaddr,HCARD handleval);

L71W32API MSGADDR __stdcall L71_MsgReset(MSGADDR msgaddr,HCARD handleval);

L71W32API USHORT __stdcall L71_MsgSWD1Rd(MSGADDR msgaddr,HCARD handleval);

L71W32API USHORT __stdcall L71_MsgSWD2Rd(MSGADDR msgaddr,HCARD handleval);

L71W32API ULONG __stdcall L71_Mul(ULONG mula,ULONG mulb);

L71W32API USHORT __stdcall L71_PortRd(INT addrval,HCARD handleval);

L71W32API VOID __stdcall L71_PortWr(USHORT value,INT addrval,HCARD handleval);

L71W32API USHORT __stdcall L71_ProgRdW(USHORT addrval,HCARD handleval);

L71W32API VOID __stdcall L71_ProgWrW(USHORT value,USHORT addrval,HCARD handleval);

L71W32API VOID __stdcall L71_RAMFill(USHORT value,ULONG addrval,ULONG countval,HCARD handleval);

L71W32API BOOL __stdcall L71_RAMIsDPM(ULONG addrval);

L71W32API USHORT __stdcall L71_RAMRdB(ULONG addrval,HCARD handleval);

L71W32API ULONG __stdcall L71_RAMRdL(ULONG addrval,HCARD handleval);

L71W32API VOID __stdcall L71_RAMRdsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L71W32API VOID __stdcall L71_RAMRdsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L71W32API USHORT __stdcall L71_RAMRdW(ULONG addrval,HCARD handleval);

L71W32API VOID __stdcall L71_RAMWipe(HCARD handleval);

L71W32API VOID __stdcall L71_RAMWipeEx(USHORT value,HCARD handleval);

L71W32API VOID __stdcall L71_RAMWrB(USHORT value,ULONG addrval,HCARD handleval);

L71W32API VOID __stdcall L71_RAMWrL(ULONG value,ULONG addrval,HCARD handleval);

L71W32API VOID __stdcall L71_RAMWrsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L71W32API VOID __stdcall L71_RAMWrsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L71W32API VOID __stdcall L71_RAMWrW(USHORT value,ULONG addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_RcvAlloc(ULONG configval,USHORT framenum,HCARD handleval);

L71W32API ERRVAL __stdcall L71_RcvConfigExx(ULONG rtconfigval,USHORT intfreq,ULONG monconfigval,ULONG intconfigval,USHORT inttotal,ULONG msgconfigval,HCARD handleval);

L71W32API USHORT __stdcall L71_RcvCountRd(HCARD handleval);

L71W32API VOID __stdcall L71_RcvCountWr(USHORT countval,HCARD handleval);

L71W32API USHORT __stdcall L71_RcvDataCountRd(HCARD handleval);

L71W32API VOID __stdcall L71_RcvDataCountWr(USHORT countval,HCARD handleval);

L71W32API MSGADDR __stdcall L71_RcvIndex(USHORT framenum,HCARD handleval);