documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32NET.VB

    Public Declare Function L71_ModeIsMon Lib "L71W32.DLL" Alias "_L71_ModeIsMon@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_ModeIsNotBC Lib "L71W32.DLL" Alias "_L71_ModeIsNotBC@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_ModeIsNotMon Lib "L71W32.DLL" Alias "_L71_ModeIsNotMon@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_ModeIsNotRT Lib "L71W32.DLL" Alias "_L71_ModeIsNotRT@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_ModeIsNotSerial Lib "L71W32.DLL" Alias "_L71_ModeIsNotSerial@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_ModeIsRT Lib "L71W32.DLL" Alias "_L71_ModeIsRT@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_ModeIsSerial Lib "L71W32.DLL" Alias "_L71_ModeIsSerial@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_ModeRd Lib "L71W32.DLL" Alias "_L71_ModeRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_ModeWr Lib "L71W32.DLL" Alias "_L71_ModeWr@8" (ByVal mode As UInt16, ByVal handleval As UInt32)
    Public Declare Function L71_MonBlkRd Lib "L71W32.DLL" Alias "_L71_MonBlkRd@16" (ByRef buf As UInt16, ByVal bufcount As UInt32, ByRef blkcnt As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_MonBlkRdEx Lib "L71W32.DLL" Alias "_L71_MonBlkRdEx@20" (ByRef buf As UInt16, ByVal bufcount As UInt32, ByVal maxblkcnt As UInt32, ByRef blkcnt As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_MonClear Lib "L71W32.DLL" Alias "_L71_MonClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_MonConfig Lib "L71W32.DLL" Alias "_L71_MonConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_MonConfigEx Lib "L71W32.DLL" Alias "_L71_MonConfigEx@16" (ByVal configval As UInt32, ByVal moncount As UInt32, ByVal cardnum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_MonConfigExx Lib "L71W32.DLL" Alias "_L71_MonConfigExx@20" (ByVal configval As UInt32, ByVal seqaddr As UInt32, ByVal moncount As UInt32, ByVal cardnum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_MonFilterSA Lib "L71W32.DLL" Alias "_L71_MonFilterSA@24" (ByVal taval As Int32, ByVal rcvsamask As UInt32, ByVal xmtsamask As UInt32, ByVal rcvmcmask As UInt32, ByVal xmtmcmask As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_MonFilterSAEx Lib "L71W32.DLL" Alias "_L71_MonFilterSAEx@24" (ByVal taval As Int32, ByVal rcvsamask As UInt32, ByVal xmtsamask As UInt32, ByVal rcvmcmask As UInt32, ByVal xmtmcmask As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_MonFilterTA Lib "L71W32.DLL" Alias "_L71_MonFilterTA@8" (ByVal tamask As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_MonIsRunning Lib "L71W32.DLL" Alias "_L71_MonIsRunning@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_MonRd Lib "L71W32.DLL" Alias "_L71_MonRd@8" (ByRef buf As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_MonRdEx Lib "L71W32.DLL" Alias "_L71_MonRdEx@12" (ByRef buf As UInt16, ByVal bufcount As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_MonResume Lib "L71W32.DLL" Alias "_L71_MonResume@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_MonStart Lib "L71W32.DLL" Alias "_L71_MonStart@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_MonStatus Lib "L71W32.DLL" Alias "_L71_MonStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_MonStop Lib "L71W32.DLL" Alias "_L71_MonStop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_MsgBlockRd Lib "L71W32.DLL" Alias "_L71_MsgBlockRd@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_MsgBlockWr Lib "L71W32.DLL" Alias "_L71_MsgBlockWr@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_MsgCheck Lib "L71W32.DLL" Alias "_L71_MsgCheck@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_MsgCommRd Lib "L71W32.DLL" Alias "_L71_MsgCommRd@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_MsgCommWr Lib "L71W32.DLL" Alias "_L71_MsgCommWr@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_MsgConfig Lib "L71W32.DLL" Alias "_L71_MsgConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_MsgConfigEx Lib "L71W32.DLL" Alias "_L71_MsgConfigEx@12" (ByVal configval As UInt32, ByVal cwd As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_MsgCWD1Rd Lib "L71W32.DLL" Alias "_L71_MsgCWD1Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_MsgCWD1Wr Lib "L71W32.DLL" Alias "_L71_MsgCWD1Wr@12" (ByVal cwd1 As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function L71_MsgCWD2Rd Lib "L71W32.DLL" Alias "_L71_MsgCWD2Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_MsgCWD2Wr Lib "L71W32.DLL" Alias "_L71_MsgCWD2Wr@12" (ByVal cwd2 As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L71_MsgDataRd Lib "L71W32.DLL" Alias "_L71_MsgDataRd@16" (ByRef buf As UInt16, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L71_MsgDataWr Lib "L71W32.DLL" Alias "_L71_MsgDataWr@16" (ByRef buf As UInt16, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function L71_MsgErrorRd Lib "L71W32.DLL" Alias "_L71_MsgErrorRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_MsgErrorWr Lib "L71W32.DLL" Alias "_L71_MsgErrorWr@12" (ByVal value As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function L71_MsgFieldRd Lib "L71W32.DLL" Alias "_L71_MsgFieldRd@12" (ByVal fieldtype As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_MsgFieldWr Lib "L71W32.DLL" Alias "_L71_MsgFieldWr@16" (ByVal fieldval As UInt32, ByVal fieldtype As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_MsgFlagRd Lib "L71W32.DLL" Alias "_L71_MsgFlagRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_MsgFlagWr Lib "L71W32.DLL" Alias "_L71_MsgFlagWr@12" (ByVal msgflag As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function L71_MsgIsAccessed Lib "L71W32.DLL" Alias "_L71_MsgIsAccessed@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_MsgOptRd Lib "L71W32.DLL" Alias "_L71_MsgOptRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_MsgOptWr Lib "L71W32.DLL" Alias "_L71_MsgOptWr@12" (ByVal msgopt As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function L71_MsgReset Lib "L71W32.DLL" Alias "_L71_MsgReset@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_MsgSWD1Rd Lib "L71W32.DLL" Alias "_L71_MsgSWD1Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_MsgSWD2Rd Lib "L71W32.DLL" Alias "_L71_MsgSWD2Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_Mul Lib "L71W32.DLL" Alias "_L71_Mul@8" (ByVal mula As UInt32, ByVal mulb As UInt32) As UInt32
    Public Declare Function L71_PortRd Lib "L71W32.DLL" Alias "_L71_PortRd@8" (ByVal addrval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_PortWr Lib "L71W32.DLL" Alias "_L71_PortWr@12" (ByVal value As UInt16, ByVal addrval As Int32, ByVal handleval As UInt32)
    Public Declare Function L71_ProgRdW Lib "L71W32.DLL" Alias "_L71_ProgRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_ProgWrW Lib "L71W32.DLL" Alias "_L71_ProgWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L71_RAMFill Lib "L71W32.DLL" Alias "_L71_RAMFill@16" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L71_RAMIsDPM Lib "L71W32.DLL" Alias "_L71_RAMIsDPM@4" (ByVal addrval As UInt32) As Int32
    Public Declare Function L71_RAMRdB Lib "L71W32.DLL" Alias "_L71_RAMRdB@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_RAMRdL Lib "L71W32.DLL" Alias "_L71_RAMRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L71_RAMRdsL Lib "L71W32.DLL" Alias "_L71_RAMRdsL@16" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L71_RAMRdsW Lib "L71W32.DLL" Alias "_L71_RAMRdsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Function L71_RAMRdW Lib "L71W32.DLL" Alias "_L71_RAMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_RAMWipe Lib "L71W32.DLL" Alias "_L71_RAMWipe@4" (ByVal handleval As UInt32)
    Public Declare Sub L71_RAMWipeEx Lib "L71W32.DLL" Alias "_L71_RAMWipeEx@8" (ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L71_RAMWrB Lib "L71W32.DLL" Alias "_L71_RAMWrB@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L71_RAMWrL Lib "L71W32.DLL" Alias "_L71_RAMWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L71_RAMWrsL Lib "L71W32.DLL" Alias "_L71_RAMWrsL@16" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L71_RAMWrsW Lib "L71W32.DLL" Alias "_L71_RAMWrsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L71_RAMWrW Lib "L71W32.DLL" Alias "_L71_RAMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L71_RcvAlloc Lib "L71W32.DLL" Alias "_L71_RcvAlloc@12" (ByVal configval As UInt32, ByVal framenum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_RcvConfigExx Lib "L71W32.DLL" Alias "_L71_RcvConfigExx@28" (ByVal rtconfigval As UInt32, ByVal intfreq As UInt16, ByVal monconfigval As UInt32, ByVal intconfigval As UInt32, ByVal inttotal As UInt16, ByVal msgconfigval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_RcvCountRd Lib "L71W32.DLL" Alias "_L71_RcvCountRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_RcvCountWr Lib "L71W32.DLL" Alias "_L71_RcvCountWr@8" (ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Function L71_RcvDataCountRd Lib "L71W32.DLL" Alias "_L71_RcvDataCountRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_RcvDataCountWr Lib "L71W32.DLL" Alias "_L71_RcvDataCountWr@8" (ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Function L71_RcvIndex Lib "L71W32.DLL" Alias "_L71_RcvIndex@8" (ByVal framenum As UInt16, ByVal handleval As UInt32) As UInt32
